tests/baselines/reference/stringLiteralTypesWithTemplateStrings02.errors.txt
tests/cases/conformance/types/stringLiteral/stringLiteralTypesWithTemplateStrings02.ts(2,5): error TS2322: Type 'string' is not assignable to type '"AB\r\nC"'.
tests/cases/conformance/types/stringLiteral/stringLiteralTypesWithTemplateStrings02.ts(4,5): error TS2322: Type 'string' is not assignable to type '"DE\nF"'.


==== tests/cases/conformance/types/stringLiteral/stringLiteralTypesWithTemplateStrings02.ts (2 errors) ====
    
    let abc: "AB\r\nC" = `AB
        ~~~
!!! error TS2322: Type 'string' is not assignable to type '"AB\r\nC"'.
    C`;
    let de_NEWLINE_f: "DE\nF" = `DE${"\n"}F`;
        ~~~~~~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type '"DE\nF"'.